Bug 251634 - Unreviewed, add missing include to fix iOS build
Summary: Unreviewed, add missing include to fix iOS build
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebCore Misc. (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Chris Dumez
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-02-02 14:40 PST by Chris Dumez
Modified: 2023-02-02 14:45 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Dumez 2023-02-02 14:40:19 PST
Add missing include to fix iOS build.
Comment 1 Radar WebKit Bug Importer 2023-02-02 14:40:38 PST
<rdar://problem/104978349>
Comment 2 Chris Dumez 2023-02-02 14:41:27 PST
Pull request: https://github.com/WebKit/WebKit/pull/9556
Comment 3 EWS 2023-02-02 14:45:18 PST
Committed 259783@main (d0496986a3c0): <https://commits.webkit.org/259783@main>

Reviewed commits have been landed. Closing PR #9556 and removing active labels.