Unreviewed, add missing include to fix iOS build https://bugs.webkit.org/show_bug.cgi?id=251634 rdar://104978349

* Source/WebCore/platform/ios/PlatformScreenIOS.mm:

Canonical link: https://commits.webkit.org/259783@main